# SComplex

./: CMakeLists.txt  Makefile
data/cubical/: RFCubSet_d4s16f50.cub  bingshouse.txt  kleinbot.cub  qklein.cub  qprojpln.cub  qtorus.cub  torus.cub
inc/: AKQStrategy.hpp  BasicCellProxy.hpp  Cell.hpp  CellProxy.hpp  CrHomS.hpp  CubSComplex.hpp  CubSComplex_Cell.hpp  CubSComplex_IteratorProvider.hpp  CubSComplex_Iterators.hpp  CubSComplex_Numerators.hpp  OldCored.hpp  SComplex.hpp  SComplexAlgs.hpp  SComplexAlgs_COAKQ.hpp  SComplexAlgs_COAKQStrategy.hpp  SComplexAlgs_Coreduction.hpp  SComplexAlgs_DefaultReduceStrategy.hpp  SComplexAlgs_DefaultReduceStrategyTraits_CubSComplex.hpp  SComplexAlgs_DefaultReduceStrategy_CubSComplex.hpp  SComplexAlgs_Shave.hpp  SComplexBuilderFromSimplices.hpp  Simplex.hpp  SimplexCell.cpp  SimplexCell.hpp  SimplexIO.hpp  SimplexInternalColoredIterators.hpp  SimplexSComplex.hpp  SimplexSubdivision.hpp  simple_set.h  simplex_iterators.hpp
inc/RedHom/: SComplex.hpp  SComplexDefaultTraits.hpp  SimplexSComplex.hpp  SimplexSubdivision.hpp
inc/RedHom/complex/cubical/: CubSComplex.hpp  CubSComplex_Cell.hpp
inc/algorithm/strategy/: DefaultReduceStrategy_CubSComplex.hpp
inc/complex/cubical/: CubSComplex_Numerators.hpp
inc/redHom/: RedHomCAPD.h  SimplexSubdivision.hpp
inc/redHom/algorithm/: AKQStrategy.hpp  Algorithms.hpp  COAKQ.hpp  CellDimIndexer.hpp  Coreduction.hpp  OptimisticAKQStrategy.hpp  Shave.hpp
inc/redHom/algorithm/strategy/: COAKQStrategy.hpp  DefaultReduceStrategy.hpp  DefaultReduceStrategyTraits_CubSComplex.hpp  DefaultReduceStrategy_CubSComplex.hpp
inc/redHom/complex/: BasicCellProxy.hpp
inc/redHom/complex/cubical/: CubSComplex.hpp  CubSComplexReader.hpp  CubSComplex_Cell.hpp  CubSComplex_Iterators.hpp
inc/redHom/complex/rectCellComplex/: cell.h  cell.hpp  cellComplex.h  cellComplex.hpp
inc/redHom/complex/scomplex/: SComplex.hpp  SComplexDefaultTraits.hpp  SComplexReader.hpp
inc/redHom/complex/simplicial/: Simplex.hpp  SimplexCell.hpp  SimplexIO.hpp  SimplexInternalColoredIterators.hpp  SimplexSComplex.hpp  SimplexSubdivision.hpp
inc/redHom/util/: SaveBoundary.hpp
inc/util/: ColorListModel.hpp  ColorListNeighbourModel.hpp  ColoredObjectsListModel.hpp  Iterators.hpp
lib/: CMakeLists.txt
lib/complex/simplicial/: SimplexCell.cpp  SimplexIO.cpp  SimplexSComplex.cpp
makefiles/: Makefile.build  Makefile.cccc  Makefile.cmd.vars  Makefile.compile.vars  Makefile.cppcheck  Makefile.depend  Makefile.depend.vars  Makefile.dirs  Makefile.dirs.vars  Makefile.lcov  Makefile.paths.vars  Makefile.srcs.vars  Makefile.tests  Makefile.tests.vars
src/: CMakeLists.txt  CrHomS.cpp  CubSComplex_Cell.cpp  SComplexCoreduce.cpp  SimplexCell.cpp  SimplexCoreduce.cpp
src/redHom/: CMakeLists.txt  main.cpp
src/redHom/inc/: RedHomOptions.hpp
test/: S1p7.txt
test/unit/: AKQTest.cpp  CMakeLists.txt  COAKQTest.cpp  CubSComplexIteratorsTest.cpp  CubSComplexReductionTest.cpp  SComplexColorTest.cpp  SComplexInitTest.cpp  SComplexReductionTest.cpp  SComplexUnitTestMain.cpp  SimplexSComplexTest.cpp
